platforms/matrix/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: elaine-matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest
          args: ["run"]
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/homeserver.yaml
              subPath: homeserver.yaml
              readOnly: true
            - name: config
              mountPath: /data/log.config
              subPath: log.config
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse-pvc
        - name: config
          configMap:
            name: synapse-config
