platforms/matrix/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-service
  namespace: elaine-matrix
spec:
  selector:
    app: synapse
  ports:
    - port: 8008
      targetPort: 8008
  type: ClusterIP
