platforms/matrix/synapse/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-route
  namespace: elaine-matrix
spec:
  parentRefs:
    - name: primary
      namespace: istio-system
      sectionName: http-platsoc
    - name: primary
      namespace: istio-system
      sectionName: https-platsoc
  hostnames:
    - "elaine-matrix.platso.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: synapse-service
          port: 8008
